<resources>
    <string name="app_name">超级管家</string>
    <string name="service_butler">管家服务</string>
    <string name="wechat_jingxuan">微信精选</string>
    <string name="girl_center">美女社区</string>
    <string name="user_center">个人中心</string>
    <string name="text_setting">设置</string>
    <string name="enter_main_page">进入主页</string>
    <string name="text_pass"><![CDATA[跳过 >]]></string>
    <string name="text_user_name">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_login">登陆</string>
    <string name="text_register">注册</string>
    <string name="text_remember_pwd">记住密码</string>
    <string name="text_forget_pwd">忘记密码</string>
    <string name="text_age">年龄</string>
    <string name="text_summary">简介</string>
    <string name="text_man">男</string>
    <string name="text_woman">女</string>
    <string name="text_input_again">再输入一次</string>
    <string name="text_email">邮箱</string>
    <string name="text_need_verify">注册成功需要邮箱验证</string>
    <string name="default_summary">这个人很懒，什么都没有留下</string>
    <string name="psw_no_same">两次密码输入不一致</string>
    <string name="enter_not_null">输入框不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_psw">重置密码</string>
    <string name="old_psw">旧密码</string>
    <string name="new_psw">新密码</string>
    <string name="psw_again">再次输入密码</string>
    <string name="change_password">修改密码</string>
    <string name="through_email">通过邮箱修改密码</string>
    <string name="text_loding">正在登陆...</string>
    <string name="edit_info">编辑资料</string>
    <string name="text_name">姓名:</string>
    <string name="text_sex">性别:</string>
    <string name="text_age_point">年龄:</string>
    <string name="text_summary_point">简介:</string>
    <string name="confirm_change">确定修改</string>
    <string name="check_logistics">物流查询</string>
    <string name="check_attribution">归属地查询</string>
    <string name="login_out">退出登录</string>
    <string name="change_fail">修改失败</string>
    <string name="change_success">修改成功</string>
    <string name="take_photo">拍照</string>
    <string name="text_picture">图库</string>
    <string name="text_cancel">取消</string>
    <string name="courier_company">快递公司</string>
    <string name="courier_number">快递单号</string>
    <string name="search">查询</string>
    <string name="courier_search">物流查询</string>
    <string name="place_belong_search">归属地查询</string>
    <string name="enter_number">请输入号码</string>
    <string name="text_query">查询</string>
    <string name="text_belong_place">归属地：</string>
    <string name="text_areacode">区号：</string>
    <string name="text_zip">邮编：</string>
    <string name="text_phone_company">营运商：</string>
    <string name="text_card_type">类型：</string>
    <string name="enter_your_problem">请输入你的问题</string>
    <string name="text_send">发送</string>
    <string name="enter_pass_limit">输入长度超出限制</string>
    <string name="welfare">福利</string>
    <string name="speak_tell">语音播报</string>
    <string name="speak_tell_detail">开启之后与服务管家将进行语音播报</string>
    <string name="sms_remind">智能短信提醒</string>
    <string name="sms_remind_detail">开启后收到短信将弹窗提醒</string>
    <string name="text_reply">回复</string>
    <string name="text_email_sender">发件人：</string>
    <string name="check_version">检测版本</string>
    <string name="check_version_detail">检查是否有新版本下载</string>
    <string name="check_version_point">检测版本：</string>
    <string name="now_is_lastest_version">当前是最新版本</string>
    <string name="download_update">下载更新</string>
    <string name="now_have_new_version">有新版本了！</string>
    <string name="text_update">更新</string>
    <string name="not_leave_when_download">下载过程中请勿离开</string>
    <string name="download_success">下载成功</string>
    <string name="download_failure">下载失败</string>
    <string name="progress_pic">----/----</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="scan_qr_code_detail">扫描二维码或条形码</string>
    <string name="share_qr_code">二维码分享</string>
    <string name="share_qr_code_detail">把自己的二维码分享给朋友吧</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="i_am_super_butler">我是超级管家</string>
    <string name="my_locate">我的位置</string>
    <string name="my_locate_detail">时刻掌握自身位置</string>
    <string name="can_not_sure_location">无法确定当前地址</string>
    <string name="is_locating">正在定位中……</string>
    <string name="about_app">关于软件</string>
    <string name="about_app_detail">查看软件版本信息</string>
    <string name="unknow">未知</string>
    <string name="text_power">強大</string>
    <string name="text_smart">智能</string>
    <string name="text_simple">简洁</string>
</resources>
