<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="linchange.example.com.supergreattest.ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/ic_boy" />

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:hint="@string/text_user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_bg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/text_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/keep_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/text_remember_pwd" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/text_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/text_register"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="@string/text_forget_pwd" />

    </LinearLayout>

</LinearLayout>
