<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="linchange.example.com.supergreattest.ui.SettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--语音播报选项-->
        <LinearLayout
            android:id="@+id/ll_speak"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speak_tell"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/speak_tell_detail"
                    android:textSize="14sp" />

            </LinearLayout>


            <Switch
                android:id="@+id/sw_speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <!--智能短信提醒选项-->
        <LinearLayout
            android:id="@+id/ll_sms"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_remind"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sms_remind_detail"
                    android:textSize="14sp" />

            </LinearLayout>

            <Switch
                android:id="@+id/sw_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!--检测版本选项-->
        <LinearLayout
            android:id="@+id/ll_update"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:id="@+id/tv_version"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/check_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/check_version_detail"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!--扫一扫选项-->
        <LinearLayout
            android:id="@+id/ll_scan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/scan_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_scan_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/scan_qr_code_detail"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!--二维码分享选项-->
        <LinearLayout
            android:id="@+id/ll_qr_code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/share_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share_qr_code_detail"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!--我的位置选项-->
        <LinearLayout
            android:id="@+id/ll_my_locate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/my_locate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/my_locate_detail"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <!--关于软件选项-->
        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about_app_detail"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
