<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_img"
            android:gravity="center"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_add_account"
                app:civ_border_width="2dp"
                app:civ_border_color="#81c7d4"/>



            <Button
                android:id="@+id/edit_user"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/edit_info"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <!--用户名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <!--性别-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sex"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <!--年龄-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age_point"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <!--简介-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_summary_point"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/confirm_change"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_courier_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/check_logistics"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_place_belong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/check_attribution"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_exit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login_out"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>